feature/sonar-issue-java-S6204
Signed-off-by: Harry Middelburg <harry.middelburg@alliander.com>